--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,5 +1,14 @@
-<h1><%= @dog.name %></h1>
-<p>Age: <%= @dog.age %></p>
-<p>Breed: <%= @dog.breed %></p>
-<p>Likes: <%= @dog.likes == nil ? "N/A" : @dogs.likes %></p>
-<p>Dislikes: <%= @dog.dislikes == nil ? "N/A" : @dogs.dislikes %></p>
+<main class="show">
+    <div class="card">
+        <h1><%= @dog.name %></h1>
+        <p>Age: <%= @dog.age %></p>
+        <p>Breed: <%= @dog.breed %></p>
+        <p>Likes: <%= @dog.likes == nil ? "N/A" : @dog.likes %></p>
+        <p>Dislikes: <%= @dog.dislikes == nil ? "N/A" : @dog.dislikes %></p>
+        <span class="added">This good dog was added to the census <%= time_ago_in_words(@dog.created_at) %> ago
+    </div>
+    <div class="buttons center">
+        <button>Edit</button>
+        <button>Delete</button>
+    </div>
+</main>
