--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,11 +1,8 @@
-<h1>Dog Census</h1>
+<main class="index grid">
 <% @dogs.each do |dog| %>
-    <div>
-        <ul>
-            <li>Name: <%= dog.name %></li>
-            <li>Age: <%= dog.age %></li>
-            <li>Breed: <%= dog.breed %></li>
-        </ul>
-        <a href="/dogs/<%= dog.id %>">View</a>
-    </div>
+    <a href="/dogs/<%= dog.id %>" class="card">
+        <h2><%= dog.name %>, <%= dog.age %></h2>
+        <p><%= dog.breed %></p>
+    </a>
 <% end %>
+</main>
