--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <header class="flex">
-    <a href="/dogs">
+    <a href="/">
       <div class="flex">
         <%= image_tag ("dog-census-logo.svg"), id: "logo" %>
         <div>
