--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -66,7 +66,7 @@ header {
 			text-transform: uppercase;
 		}
 		button {
-			background-color: #2b2be6;
+			background-color: #1c3360;
 		}
 		.button_to input {
 			width: 100%;
