--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <%= image_tag ("dog-census-logo.svg"), id: "logo" %>
         <div>
           <h1>Dog Census</h1>
-          <p>I just wan't to know how many dogs there are in the world</p>
+          <p>I just want to know how many dogs there are in the world</p>
         </div>
       </div>
     </a>
