add filter function

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -21,6 +21,13 @@ header {
 	}
 }
 
+// FILTER
+select {
+	padding: 10px;
+	margin-bottom: 20px;
+	border: none;
+}
+
 // CARDS
 .card {
 	background-color: #fff;
