--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -36,6 +36,18 @@ select {
 	width: 100%;
 	margin: auto;
 	color: #000;
+	position: relative;
+	img {
+		position: absolute;
+		top: -60%;
+		left: 50%;
+		transform: translate(-50%, 60%);
+		border-radius: 100%;
+		width: 90px;
+		height: 90px;
+		border: 5px solid #fff;
+		object-fit: cover;
+	}
 	h2 {
 		font-size: 3rem;
 	}
@@ -56,6 +68,15 @@ select {
 	width: 50%;
 	margin: auto;
 	text-align: center;
+	img {
+		width: 300px;
+		height: 300px;
+		position: static;
+		transform: translate(0%, 0%);
+		border: none;
+		border-radius: 0;
+		object-fit: contain;
+	}
 	.buttons {
 		padding: 20px;
 		button {
