--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -5,7 +5,8 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 10px;
+	gap: 70px 10px;
+	margin-top: 100px;
 }
 
 .center {
