--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,5 +1,6 @@
 <main class="show">
-    <div class="card">
+<div class="card">
+        <%=image_tag @dog.avatar.attached? ? @dog.avatar : 'dog-census-logo.svg' %>
         <h1><%= @dog.name %></h1>
         <p>Age: <%= @dog.age %></p>
         <p>Breed: <%= @dog.breed %></p>
