--- a/app/assets/stylesheets/_media.scss
+++ b/app/assets/stylesheets/_media.scss
@@ -24,10 +24,11 @@
 
 	.show {
 		width: 100%;
-		.back {
-			text-align: center;
+		.nav {
+			justify-content: space-between;
 		}
-		.card {
+		.card,
+		.buttons {
 			width: 100%;
 		}
 	}
